[project]
name = "arr-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.23",
    "langchain-anthropic>=0.3.12",
    "langchain-community>=0.3.21",
    "langchain-deepseek>=0.1.3",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.3",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.31",
    "langsmith>=0.3.32",
    "marker-pdf>=1.5.5",
    "openai>=1.75.0",
    "python-dotenv>=1.1.0",
]
